Implement levenshtein distance path suggestion.

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgxSmartRoutingDemo</title>
+  <title>Smart 404 Routing Demo</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://unpkg.com/papercss@1.6.0/dist/paper.min.css">
 </head>
 <body>
   <app-root></app-root>
