--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Smart 404 Routing Demo</title>
-  <base href="/">
-
+  <base href="/ngx-smart-routing-demo/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/papercss@1.6.0/dist/paper.min.css">
